Frontend review page and backend repository/service join fetch logic for location attributes